welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: class Array takes type parameters
def peinture(Ctab:Array) {
                  ^Array1:19: error: class Array takes type parameters
def peinture(Ctab:Array) {
                  ^Array1:26: error: not found: value getHauteurMonde
  recule(getHauteurMonde())
         ^